--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html{
     font-weight: 200;
 }
 
-*, *::before, *::after{
+*, *:before, *:after{
     box-sizing: inherit;
 }
 
@@ -36,6 +36,12 @@ input.search{
 }
 
 .suggestions{
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+}
+
+.suggestions li{
     background: #ffffff;
     list-style: none;
     border-bottom: 1px solid #d8d8d8;
@@ -51,6 +57,11 @@ input.search{
 .suggestions li:nth-child(even){
     transform: perspective(100px) rotateX(3deg) translateY(2px) scale(1.001);
     background: linear-gradient(to bottom, #ffffff 0%, #efefef 100%);
+}
+
+.suggestions li:nth-child(odd){
+    transform: perspective(100px) rotateX(-3deg) translateY(3px);
+    background: linear-gradient(to top, #ffffff 0%, #efefef 100%);
 }
 
 span.population{
